Fix toList() issue